--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -14,7 +14,8 @@
         "proprioMenu": {
             "proprio": "Entités",
             "add": "Ajouter",
-            "show": "Voir"
+            "show": "Voir",
+            "myEntity": "Mes entités"
         },
         "configMenu": {
             "configMenu": "Configuration",
@@ -165,6 +166,14 @@
           "division": "Division de la  pièce",
           "other": "Autre"
         },
+        "title": {
+          "renov": "Rénovations neccessaires"
+        },
+        "gender": {
+          "M": "Homme",
+          "W": "Femme",
+          "O": "Autre"
+        },
         "minorRenovations": {
           "label": "Rénovations mineures",
           "padlock": "Cadenas",
@@ -185,11 +194,12 @@
         "locationTypes": {
           "label": "Types d'emplacement",
           "lease": "bail",
-          "sublease": "sous_location",
-          "subleaseRealOwner": "sous_location_propriétaire_réel",
-          "subleaseCurrentOwner": "sous_location_propriétaire_actuel"
+          "sublease": "sous location",
+          "subleaseRealOwner": "sous location propriétaire réel",
+          "subleaseCurrentOwner": "sous location propriétaire actuel"
         },
         "locationAreas": {
+          "label": "Types de locations",
           "residential": "résidentiel",
           "market": "marché",
           "remote": "isolé",
@@ -197,6 +207,7 @@
           "other": "autre"
         },
         "areaStabilities": {
+          "label": "Stabilité de la zone",
           "yes": "oui",
           "no": "non",
           "sometimes": "parfois",
@@ -229,6 +240,41 @@
       "operation": "Opérations",
       "admin": "Administrateur",
       "fields_ops": "Opérations terrain"
-    }
-      
+    },
+    "steps": {
+      "stepName": "Etape",
+      "bank": "Banque",
+      "bail": "Bail",
+      "demographie": "Démographie",
+      "securite": "Sécurité",
+      "renovation": "Rénovation",
+      "images": "Images",
+      "commentaires": "Commentaires",
+      "termine": "Terminé"
+     },
+     "common": {
+      "next": "Suivant",
+      "update": "Editer",
+      "add": "Ajouter",
+      "save": "Enregistrer",
+      "delete": "Supprimer",
+      "cancel": "Annuler",
+      "edit": "Modifier",
+      "show": "Afficher",
+      "showAll": "Tout afficher",
+      "showDetails": "Afficher les détails",
+      "showMore": "Afficher plus",
+      "showLess": "Afficher moins",
+      "search": "Rechercher",
+      "searchBy": "Rechercher par",
+      "searchByName": "Rechercher par nom",
+      "addBank": "Ajouter Banque",
+      "thankyou": "Merci"
+     },
+     "upload": {
+    "maxSize": "Taille maximale : 2 Mo",
+    "dropHere": "Déposez votre image ici, ou",
+    "browse": "parcourir",
+    "supportedFormats": "Formats supportés : jpeg, png, gif"
+  }
 }
