--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -2,10 +2,10 @@
     "nav": {
         "home": "Dashboard",
         "bankMenu": {
-            "bankMenu": "Banks",
+            "bankMenu": "Gestion Bank",
             "add": "Ajouter",
             "show": "Mes banks",
-            "current": "Validation",
+            "current": "Banks",
             "approved": "Approbation",
             "ready": "Disponible",
             "rejected": "Rejetées",
@@ -223,6 +223,7 @@
           "needApproval": "Besoins de validations",
           "needApprobation": "Besoins d'approbations",
           "needContract": "Besoins de contrat",
+          "notProceeded": "Non traité",
           "needRenovation": "Besoins de rénovations",
           "readyToUse": "Prêt à ouvert",
           "pending": "En consideration"
