add place to se all banks

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -276,6 +276,11 @@
           "label": "Air Conditionée",
           "yes": "Oui",
           "no": "Non"
+        },
+        "renovSteps": {
+          "construction": "Contruction",
+          "comptoire": "Comptoire",
+          "peinture": "Peinture"
         }
     },
     "entity": {
