Add report menu

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -12,7 +12,7 @@
             "contrat": "Paiement & Contrats",
             "renovation": "Rénovation",
             "pending": "Considération",
-            "vendor": "Gestionnaires de vendeurs",
+            "vendor": "Contrats",
             "report": "Rapport"
         },
         "proprioMenu": {
