Change menu & pagination bank

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -296,7 +296,7 @@
       "proprietaire": "Propriétaire",
       "reference": "Référence",
       "agent_immobilier": "Agent immobilier",
-      "coordonator": "Coordinateur",
+      "coordonator": "Coordonateur",
       "assist_coordonator": "Assistant coordinateur",
       "super_manager": "Super Manager",
       "manager": "Manager",
