final_rent_cost add

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -37,7 +37,8 @@
       "superficie": "Superficie (m2)",
       "nombre_chambre": "Nombre de chambres",
       "date": "Date",
-      "rentCost": "Coût du loyer",
+      "rentCost": "Coût du loyer Iniatial",
+      "final_rentCost": "Coût du loyer Final",
       "reference": "Référence",
       "landlord": "Propriétaire",
       "isrefSameAsLandlord": "La référence est-elle le propriétaire",
