--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -81,7 +81,7 @@
       "superficie": "Superficie (m2)",
       "nombre_chambre": "Nombre de chambres",
       "date": "Date",
-      "rentCost": "Coût du loyer Iniatial",
+      "rentCost": "Coût du loyer Initial",
       "final_rentCost": "Coût du loyer Final",
       "reference": "Référence",
       "landlord": "Propriétaire",
