increase number ok week

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -50,6 +50,7 @@
             "bankMenu": "Gestion Bank",
             "add": "Ajouter",
             "show": "Mes banks",
+            "ops":"Opérationelles",
             "current": "Banks Actives",
             "icurrent": "Banks Inactives",
             "approved": "Approbation",
