--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -20,7 +20,8 @@
       "regionalApproval": "Approbation régionale",
       "accountantRegionalApproval": "Approbation comptable (régionale)",
       "managerGlobalApproval": "Approbation manager (globale)",
-      "rejected": "Rejeté"
+      "rejected": "Rejeté",
+      "approved" : "Approuvé"
     },
     "type": {
       "1": {
@@ -127,7 +128,8 @@
       "name": "Requêtes",
       "add": "Ajouter",
       "myShow": "Mes requêtes",
-      "show": "Voir"
+      "show": "Voir",
+       "action": "Action Comptable"
     },
     "proprioMenu": {
       "proprio": "Entités",
