add role super_accountant and add comment

--- a/rent/src/locales/lang/fr.json
+++ b/rent/src/locales/lang/fr.json
@@ -487,6 +487,7 @@
     "fields_ops": "Opérations terrain",
     "vendor_management": "Géstion des vendeurs",
     "assist_accountant": "Assistant comptable",
+    "super_accountant": "Super comptable",
     "accountant": "Comptable"
   },
   "steps": {
